# learnSFML

./: CMakeLists.txt  gen.ps1  run.ps1
src/: main.cpp
